# flu_shot_learning

./: .gitignore  pyproject.toml
Flushot/: README.md  pyproject.toml
project/flushot/: README.md  pyproject.toml
tools/cookiecutter/{{ cookiecutter.repo_name }}/: pyproject.toml
