[tool.poetry]
name = "flushot"
version = "0.1.0"
description = "main dependencies for overall project"
authors = ["Somitra"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
isort = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
