[tool.poetry]
name = "Flushot"
version = "0.1.0"
description = ""
authors = ["Somitra <smtrgupta96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
seaborn = "^0.11.0"
matplotlib = "^3.3.2"
sklearn = "^0.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
